# kabu-shihyo

./: .env.example  .gitignore  README.md  methodology.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: daily.yml
config/: README.md  allocation_policy.yaml  holdings.example.csv  indicators.csv  instruments.csv  ism_pmi_manual.csv  rss_sources.csv  structural_scores.csv  themes.csv
config/scenarios/: ai_datacenter.yaml  crypto_xrp.yaml  ev_physical_ai.yaml  generate.py  quantum.yaml  robotics_fa.yaml  (+1 more)
docs/: investment_os_design.md
outputs/: collapse_watch.csv  cycle_scores.csv  daily_report.md  demand_index_components.csv  demand_index_scores.csv  dip_sell_scores.csv  discovery_companies.csv  discovery_themes.csv  event_study_results.csv  index.html  indicator_scorecard.csv  indicator_weights.csv  lag_correlation_matrix.csv  macro_indicators.csv  manifest.json  portfolio_signal_scores.csv  prediction_accuracy.csv  risk_level_by_theme.csv  sw.js  technical_scores.csv  theme_scores.csv  xrp_demand_scores.csv
src/: config.py  indicator_loader.py  main.py
tests/: test_allocation.py  test_base_fetcher.py  test_config.py  test_daily_report.py  test_dashboard_builder.py  test_decision.py  test_decision_report.py  test_discovery.py  test_edinet.py  test_features.py  test_indicator_loader.py  test_ism_pmi_manual.py  test_materials.py  test_materials_ingest.py  test_notifications.py  test_phase7_scoring.py  test_prediction.py  test_registry.py  test_risk.py  test_scoring.py  test_theme_score.py  test_validation.py  test_weight_updater.py
(+168 files in other folders)
